# parse2docs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: deploy.yml  linters.yml  tests.yml
parse2docs/: app.py  argfinder.py  markdown_renderer.py  module_loader.py
tests/: demo_parser_in_function.py  demo_parser_in_module.py  test_argfinder.py  test_markdown_renderer.py  test_module_loader.py
