[tool.poetry]
name = "parse2docs"
version = "0.1.3"
description = "Generate usage documentation from Python scripts using the `argparse` module"
authors = ["Fernando Cordeiro"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.2.2"
ipykernel = "^6.22.0"
ruff = "^0.0.275"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
parse2docs = "parse2docs.app:execute_from_command_line"

[tool.coverage.report]
fail_under = 90

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
